fix: Fix the unsupported hint not showing correctly

--- a/src/_assets/css/_includes/platform-specific-content.scss
+++ b/src/_assets/css/_includes/platform-specific-content.scss
@@ -6,10 +6,17 @@
   }
 }
 
+.unsupported {
+  .unsupported-hint {
+    display: none;
+  }
+}
+
 .unsupported.is-unsupported {
   opacity: 0.5;
 
   .unsupported-hint {
+    display: block;
     font-size: 0.9rem;
     font-weight: bold;
     margin-bottom: 0.3rem;
